added Libby and RBDigital

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -3,8 +3,54 @@
 <div class="w3-content w3-display-container">
 
 
+  <div class="mySlides my-fade">
+      <figure class="slider">
+          <figure>
+              <a href="/405/Digital-Resource-of-the-Month" style="text-decoration: none;">
+                  <img src="/ImageRepository/Document?documentID=864" alt="">
+                  <figcaption>
+                      <section>
+                          <h4>RBdigital</h4>
+                          <p>New name. New look.
+                            <br>
+                            New app.</p>
+                          <h4>Same great content!</h4>
+
+
+                      </section>
+                  </figcaption>
+              </a>
+          </figure>
+      </figure>
+  </div>
 
   <div class="mySlides my-fade">
+      <figure class="slider">
+          <figure>
+              <a href="/413/Libby" style="text-decoration: none;">
+                  <img src="/ImageRepository/Document?documentID=865" alt="">
+                  <figcaption>
+                      <section>
+                          <h4>Meet Libby</h4>
+                          <p>Like OverDrive?
+                            <br>
+                            Stick with it!
+                          </p>
+                          <p>
+                            Not sure?
+                            <br>
+                            Try the new Libby app.</p>
+
+                      </section>
+                  </figcaption>
+              </a>
+          </figure>
+      </figure>
+  </div>
+
+
+
+    <div class="mySlides my-fade">
       <figure class="slider">
           <figure>
               <a href="/409/Kids-Summer-Reading" style="text-decoration: none;">
@@ -79,8 +125,8 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
-        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span> -->
-        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
